fix function to toggle keyboard and label visibility

--- a/style.sass
+++ b/style.sass
@@ -49,6 +49,11 @@ html, body
 	margin: 11px
 	border-radius: 13px
 
+.label
+	font-size: 23px
+	bottom: 6px
+	left: 50%
+
 .pressed
 	box-shadow: 0 0 11px 11px
 
